# void-browser

./: .gitignore  ARCHITECTURE.md  GITHUB_RELEASE_v1.1.0.md  LICENSE  LICENSES.md  README.md  REDDIT_POST_DRAFT.md  RELEASE_NOTES.md  add_void.py  start.bat  void-browser-card.html
.github/workflows/: release.yml
app/: index-web.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.config.web.ts
app/src/: App.tsx  WebDemoApp.tsx  index.css  main-web.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: auto_discovery_additions.rs  export_import_additions.rs  lib.rs  lib_updated.rs  main.rs
app/src/components/: BrokenLinkPanel.tsx  CrawlModal.tsx  ExportModal.tsx  (+11 more)
checkpoints/: checkpoint-2026-01-18-session3-final.md  checkpoint-2026-01-18-session3.md  checkpoint-2026-01-18.md
claude-memory/: ACTIVE_TASK.md  QUICK_SAVE.md
claude-memory/context/: SEARCH_INTEGRATION.md  project-overview.md
crawler/: check-screenshots.cjs  package-lock.json  package.json  test-export.json  thered-export.json
crawler/src/: crawler.ts  fetcher.ts  index.ts  parser.ts  queue.ts  screenshot.ts  storage.ts  types.ts
crawler/voids/: hackernews.db  jacobterrell.db  mee6.db  test-session3.db  test-void.db  thered.db  thered2.db
web-app/: package-lock.json  package.json  vite.config.ts
web-app/src/: DemoApp.tsx  main.tsx
web-demo/: index.html  landing.html  package-lock.json  package.json  vite.config.ts
web-demo/src/: App.tsx  index.css
(+35 files in other folders)
