[package]
name = "void-browser"
version = "1.1.0"
description = "3D spatial browser - fly through the web"
authors = ["Jake"]
edition = "2021"

[lib]
name = "void_browser_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
chrono = "0.4"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18"
tokio = { version = "1", features = ["time"] }
rand = "0.8"
